--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
             <button class="reset-btn">Reset</button>
         </div>
 
-        <script src="scrript.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
